fix(): recommended content spacing

--- a/src/components/PodcastPreview/PodcastPreview.module.scss
+++ b/src/components/PodcastPreview/PodcastPreview.module.scss
@@ -5,7 +5,7 @@
 
 .podcastPreview {
   flex: 0 1 100%;
-  margin: 0 gutters.$gutter;
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
